--- a/Project Development Phase/sprint 1/templates/register.html
+++ b/Project Development Phase/sprint 1/templates/register.html
@@ -1,5 +1,5 @@
 </head>
-<body bgcolor="orange">
+<body bgcolor="green">
 <h1 style="text-align:center;">Sign-Up Page</h1>
 <form action="/register" method="post">
    Name :<br>
